Fixed post table body truncation with scaffolds scss class

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,3 @@
         max-width: 100%;
     }
 }
-
-.container {
-    height: 400px;
-}
